--- a/lesson_05_01/css/index.css
+++ b/lesson_05_01/css/index.css
@@ -1,36 +1,57 @@
-body{
+body {
     background-color: lightgray;
 }
 
-#root{
+#root {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
-#layout{
+#layout {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 300px 500px 200px;
-    grid-template-areas: 
-    "header"
-    "content"
-    "footer"
+    grid-template-rows: 300px auto 200px;
+    grid-template-areas:
+        "header"
+        "content"
+        "footer"
 }
 
-#layout header{
+#layout header {
     grid-area: header;
     background-color: lightgoldenrodyellow;
 
 }
 
-#layout main{
+#layout main {
     grid-area: content;
     background-color: beige;
 }
-#layout footer{
+
+#layout footer {
     grid-area: footer;
     background-color: antiquewhite;
+}
+
+#cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+}
+
+#cards section {
+    flex: 0 1 100%;
+    height: 100px;
+}
+
+#cards section.s1 {
+    background-color: plum;
+}
+
+#cards section.s2 {
+    background-color: skyblue;
 }
 
 /* Small devices (landscape phones, 576px and up)*/
