--- a/lesson_05_01/css/index.css
+++ b/lesson_05_01/css/index.css
@@ -11,7 +11,7 @@ body {
 #layout {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 300px auto 200px;
+    grid-template-rows: auto auto 200px;
     grid-template-areas:
         "header"
         "content"
@@ -20,7 +20,7 @@ body {
 
 #layout header {
     grid-area: header;
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(255, 255, 255);
 
 }
 
@@ -43,7 +43,7 @@ body {
 
 #cards section {
     flex: 0 1 100%;
-    height: 100px;
+    border: 1px black solid;
 }
 
 #cards section.s1 {
@@ -52,6 +52,26 @@ body {
 
 #cards section.s2 {
     background-color: skyblue;
+}
+
+#cards h1 {
+    text-align: center;
+    margin: 2em 0em;
+
+}
+
+header h2 {
+    font-size: 2em;
+    text-align: center;
+    line-height: 1.5em;
+    color: rgba(0, 0, 0, 0.582);
+    margin-top: 2em;
+
+}
+
+header img{
+    display: block;
+    margin:1em  auto 2em;
 }
 
 /* Small devices (landscape phones, 576px and up)*/
@@ -66,6 +86,10 @@ body {
     #root {
         max-width: 720px;
     }
+
+    #cards section {
+        flex: 0 1 50%;
+    }
 }
 
 /* Large devices (desktops, 992px and up)*/
@@ -79,6 +103,10 @@ body {
 @media (min-width: 1200px) {
     #root {
         max-width: 1140px;
+    }
+
+    #cards section {
+        flex: 1 1 33%;
     }
 }
 
