--- a/lesson_05_02/css/index.css
+++ b/lesson_05_02/css/index.css
@@ -11,7 +11,7 @@ body {
 #layout {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto 200px;
+    grid-template-rows: auto auto auto;
     grid-template-areas:
         "header"
         "content"
@@ -60,6 +60,7 @@ body {
 
 }
 
+/*header*/
 header h2 {
     font-size: 2em;
     text-align: center;
@@ -69,9 +70,52 @@ header h2 {
 
 }
 
-header img{
+header img {
     display: block;
-    margin:1em  auto 2em;
+    margin: 1em auto 2em;
+}
+
+/*footer*/
+
+footer ul {
+    margin: 2em 2em 0 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+
+}
+
+footer address {
+    margin-top: 2em;
+    text-align: center;
+    font-size: small;
+    color: lightgray;
+}
+
+footer ul a:link {
+    text-decoration: none;
+    color: black;
+}
+
+footer a:hover {
+
+    text-decoration: none;
+    color: black;
+}
+
+footer ul img,
+footer ul span {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+footer ul li {
+    list-style-type: none;
+    padding: 0 1em;
+
 }
 
 /* Small devices (landscape phones, 576px and up)*/
