--- a/lesson_05_02/css/index.css
+++ b/lesson_05_02/css/index.css
@@ -43,22 +43,53 @@ body {
 
 #cards section {
     flex: 0 1 100%;
-    border: 1px black solid;
+    padding: 2em;
+
 }
 
-#cards section.s1 {
-    background-color: plum;
+#cards section div{    
+    box-shadow: 2px 2px 1px rgba(255, 159, 81, 0.2)
 }
 
-#cards section.s2 {
-    background-color: skyblue;
+#cards .card{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
+#cards .card .cardTitle{
+    flex: 0 1 200px;
+}
+
+#cards .card .cardText{
+    flex: 0 1 100px;
+    padding: 1em;
+}
+
+#cards .card .cardFooter{
+    flex: 0 1 50px;
+}
+
+#cards .cardFooter{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    padding: 0 1em;
+}
+
+#cards .cardFooter span{
+    margin-left: auto;
+}
+
+/*The cards title**/
+/*
 #cards h1 {
     text-align: center;
     margin: 2em 0em;
 
 }
+*/
 
 /*header*/
 header h2 {
@@ -87,20 +118,19 @@ footer ul {
 
 }
 
-footer address {
-    margin-top: 2em;
+footer address{
+    margin-top:2em;
     text-align: center;
     font-size: small;
     color: lightgray;
 }
 
-footer ul a:link {
+footer ul a{
     text-decoration: none;
-    color: black;
+    color: rgb(20, 55, 253);
 }
 
-footer a:hover {
-
+footer ul a:hover{
     text-decoration: none;
     color: black;
 }
