--- a/lesson_05_02/css/index.css
+++ b/lesson_05_02/css/index.css
@@ -26,12 +26,12 @@ body {
 
 #layout main {
     grid-area: content;
-    background-color: beige;
+    background-color: rgb(49, 69, 129);
 }
 
 #layout footer {
     grid-area: footer;
-    background-color: antiquewhite;
+    background-color: rgb(133, 127, 138);
 }
 
 #cards {
@@ -75,11 +75,37 @@ body {
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
+    align-items: flex-start;
     padding: 0 1em;
 }
 
+#cards .cardFooter .view{
+    flex: 0 1 auto;
+    background-color: rgba(123, 176, 255, 0.966);
+    padding: 0.5em;
+    border-radius: 1em 0.5em 0.5em 1em;
+}
+
+#cards .cardFooter .edit{
+    flex: 0 1 auto;
+    background-color: rgba(123, 176, 255, 0.966);
+    padding: 0.5em;
+    border-radius: 0.5em 1em 1em 0.5em;
+}
+
+#cards .cardFooter a{
+    text-decoration: none;
+    color: white;
+    border: 2px solid rgb(127, 126, 126);
+    background-color: lightgray;
+    font-size: 0.8em;
+}
 #cards .cardFooter span{
+    flex: 0 1 auto;
     margin-left: auto;
+    padding: 0.5em;
+    font-size: 0.8em;
+    color: rgb(247, 117, 112);
 }
 
 /*The cards title**/
@@ -127,7 +153,7 @@ footer address{
 
 footer ul a{
     text-decoration: none;
-    color: rgb(20, 55, 253);
+    color: rgb(255, 255, 255);
 }
 
 footer ul a:hover{
